apps/immich/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
    - immich.i.shikanime.studio
  parentRefs:
    - name: immich
      sectionName: https
  rules:
    - backendRefs:
        - name: immich
          port: http
