apps/immich/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
spec:
  defaultBackend:
    service:
      name: immich
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
