apps/immich/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
    - immich.taila659a.ts.net
  parentRefs:
    - name: immich
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-redirect
spec:
  hostnames:
    - immich.taila659a.ts.net
  parentRefs:
    - name: immich
      sectionName: http
